2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Affidavit Contacts' report to use spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Affiliate Activity' report to use spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'All Affiliates', 'Affiliates by Daypart',
	'Affiliates by Network', 'Affiliates by Program',
	'Affiliates by Program/DMA Market', Affiliates by Program/MSA Market',
	'Affiliate/Contacts by Program' reports to use spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Arbitron' report to use spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Programs by City/State', 'Programs by DMA Market'
	and 'Programs by MSA Market' reports to use the spreadsheet
	rendering library.
2014-12-19 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'Missing Affidavit Contacts' report to use the
	spreadsheet rendering library.
2014-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'davit/preview.cpp' to place the exception section
	of affidavits on a separate page.
2014-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'davit/edit_airing.cpp' and 'davit/list_airings.cpp'
	to allow air times to end at midnight.
2014-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Converted 'RadioAmerica Affiliates' report to use the
	spreadsheet rendering library.
2014-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'Added Programs' report where the date
	range parameters were ignored.
2014-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SpreadObject::defaultFont()', 'SpreadObject::setDefaultFont()'
	and 'SpreadObject::fontMetrics()' methods in 'lib/spread_object.cpp'
	and 'lib/spread_object.h'.
	* Converted reports to use default font.
2014-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Refactored reports to use common 'SpreadSheet' object.