@@ -26,7 +26,7 @@
 #include <pick_fields.h>
 #include <list_reports.h>
 
-void ListReports::RAAffiliateReport(SpreadSheet *sheet)
+bool ListReports::RAAffiliateReport(SpreadSheet *sheet)
 {
   int affiliate_id=0;
   int pgm_id=0;
@@ -41,7 +41,7 @@ void ListReports::RAAffiliateReport(SpreadSheet *sheet)
 		   NULL,PickFields::NoMarket,this);
   if(r->exec()!=0) {
     delete r;
-    return;
+    return false;
   }
   delete r;
 
@@ -151,4 +151,6 @@ void ListReports::RAAffiliateReport(SpreadSheet *sheet)
     row++;
   }
   delete q;
+
+  return true;
 }
